--- a/core/templates/components/_header.html
+++ b/core/templates/components/_header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
   <div class="container-fluid">
-    <a class="navbar-text text-white" href="{% url 'home' %}">Sistema de Gestão de Estoque</a>
+    <a class="navbar-text text-white" href="#">Sistema de Gestão de Estoque</a>
   </div>
 </nav>
