--- a/core/templates/components/_sidebar.html
+++ b/core/templates/components/_sidebar.html
@@ -9,7 +9,7 @@
         <ul class="nav flex-column align-items-sm-start" id="menu">
 
           <li>
-            <a href="#" class="nav-link px-0 align-middle">
+            <a href="{% url 'supplier_list' %}" class="nav-link px-0 align-middle">
               <i class="bi bi-truck" fs-4></i> 
               <span class="ms-1">Fornecedores</span>
             </a>
@@ -23,7 +23,7 @@
           </li>
 
           <li>
-            <a href="#" class="nav-link px-0 align-middle">
+            <a href="{% url 'category_list' %}" class="nav-link px-0 align-middle">
               <i class="bi bi-tags" fs-4></i> 
               <span class="ms-1">Categorias</span>
             </a>
