Adicionei os arquivos signals.py em inflows e outflows, onde o saldo de estoque de um produto é aualizado automaticamente a medida que um registro de entrada ou de saída é criado

--- a/categories/templates/category_list.html
+++ b/categories/templates/category_list.html
@@ -16,7 +16,7 @@
       <form action="{% url 'category_list' %}" method="GET">
         <div class="input-group">
           <input type="text" name="name" value="{{ request.GET.name }}" class="form-control" placeholder="Nome da categoria">
-          <button class="btn btn-primary" type="submit">
+          <button class="btn btn-primary ms-1" type="submit">
             <i class="bi bi-search"></i> Pesquisar
           </button>
         </div>
