--- a/inflows/templates/inflow_details.html
+++ b/inflows/templates/inflow_details.html
@@ -12,6 +12,7 @@
 			<h3 class="card-title">{{ inflow.product}}</h3>
 			<p class="card-text">Fornecedor: <strong>{{ inflow.supplier }}</strong></p>
 			<p class="card-text">Quantidade: <strong>{{ inflow.quantity }}</strong></p>
+			<p class="card-text">Data de Entrada: <strong>{{ inflow.created_at }}</strong></p
 			<p class="card-text">{{ inflow.description }}</p>
 		</div>
 	</div>
