--- a/outflows/templates/outflow_details.html
+++ b/outflows/templates/outflow_details.html
@@ -12,7 +12,9 @@
 			<h3 class="card-title">{{ outflow.product}}</h3>
 			<p class="card-text">Fornecedor: <strong>{{ outflow.supplier }}</strong></p>
 			<p class="card-text">Quantidade: <strong>{{ outflow.quantity }}</strong></p>
+			<p class="card-text">Data da Saída: <strong>{{ outflow.created_at }}</strong></p>
 			<p class="card-text">{{ outflow.description }}</p>
+			
 		</div>
 	</div>
 
