--- a/core/templates/components/_sidebar.html
+++ b/core/templates/components/_sidebar.html
@@ -10,6 +10,14 @@
         <ul class="nav flex-column align-items-sm-start" id="menu">
 
           <li>
+            <a href="{% url 'home' %}" class="nav-link px-0 align-middle">
+              <i class="bi bi-speedometer2" fs-4></i>
+              <span class="ms-1">Dashboard</span>
+            </a>
+            <a href="{% url 'admin:index' %}" class="nav-link px-0 align-middle">
+              <i class="bi bi-gear" fs-4"></i>
+              <span class="ms-1">Admin</span>
+            </a>
             <a href="{% url 'supplier_list' %}" class="nav-link px-0 align-middle">
               <i class="bi bi-truck" fs-4></i>
               <span class="ms-1">Fornecedores</span>
