--- a/outflows/templates/outflow_list.html
+++ b/outflows/templates/outflow_list.html
@@ -17,7 +17,7 @@
       <div class="input-group">
         <input type="text" name="product" value="{{ request.GET.product }}" class="form-control"
           placeholder="Nome do Produto">
-        <button class="btn btn-primary" type="submit">
+        <button class="btn btn-primary ms-1" type="submit">
           <i class="bi bi-search"></i> Pesquisar
         </button>
       </div>
