--- a/brands/templates/brand_list.html
+++ b/brands/templates/brand_list.html
@@ -38,7 +38,7 @@
                  <th scope="col">#</th>
                  <th scope="col">Nome</th>
                  <th scope="col">Descrição</th>
-                 <th scope="col">Ações</th>
+                 <th scope="col" class="text-center">Ações</th>
              </tr>
          </thead>
          <tbody>
@@ -47,7 +47,7 @@
                   <td>{{ brand.id }}</td>
                   <td>{{ brand.name }}</td>
                   <td>{{ brand.description }}</td>
-                  <td>
+                  <td class="text-center">
                     <a href="{% url 'brand_details' brand.id %}" class="btn btn-info btn-sm">
                       <i class="bi bi-info-circle"></i>
                     </a>
