--- a/categories/templates/category_list.html
+++ b/categories/templates/category_list.html
@@ -38,7 +38,7 @@
                  <th scope="col">#</th>
                  <th scope="col">Nome</th>
                  <th scope="col">Descrição</th>
-                 <th scope="col">Ações</th>
+                 <th scope="col" class="text-center">Ações</th>
              </tr>
          </thead>
          <tbody>
@@ -47,7 +47,7 @@
                   <td>{{ category.id }}</td>
                   <td>{{ category.name }}</td>
                   <td>{{ category.description }}</td>
-                  <td>
+                  <td class="text-center">
                     <a href="{% url 'category_details' category.id %}" class="btn btn-info btn-sm">
                       <i class="bi bi-info-circle"></i>
                     </a>
