--- a/core/templates/components/_sidebar.html
+++ b/core/templates/components/_sidebar.html
@@ -2,13 +2,12 @@
   <div class="col-auto col-md-0 col-xl-0 px-0 bg-dark">
     <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white">
       <button class="btn btn-dark d-block d-sm-none mb-3" type="button" data-bs-toggle="collapse"
-        data-bs-target="#menuCollapse" aria-controls="menuCollapse" aria-expanded="false">
+        data-bs-target="#menuCollapse" aria-expanded="false" aria-controls="menuCollapse">
         <i class="bi bi-list" fs-4></i>
       </button>
 
       <div class="collapse d-sm-block" id="menuCollapse">
-        <ul class="nav flex-column align-items-sm-start" id="menu">
-
+        <ul class="nav flex-column align-items-start" id="menu">
           <li>
             <a href="{% url 'home' %}" class="nav-link px-0 align-middle">
               <i class="bi bi-speedometer2" fs-4></i>
@@ -52,16 +51,14 @@
             </a>
           </li>
 
-
           <li>
             <a href="{% url 'outflow_list' %}" class="nav-link px-0 align-middle">
               <i class="bi bi-arrow-up-right-square" fs-4></i>
               <span class="ms-1">Saídas</span>
             </a>
           </li>
-
+        </ul>
       </div>
-
+      <hr>
     </div>
   </div>
-</div>
