--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %} SGE - Home {% endblock title %}
 
 {% block content %}
-<div class="container mt-6">
-    <h3 class="display-6">Home</h3>
-</div>
+
+	{% include 'components/_product_metrics.html' %}
+
 {% endblock content %}
