--- a/inflows/templates/inflow_list.html
+++ b/inflows/templates/inflow_list.html
@@ -39,9 +39,9 @@
         <th scope="col">#</th>
         <th scope="col">Produto</th>
         <th scope="col">Fornecedor</th>
-        <th scope="col">Quantidade</th>
+        <th scope="col" class="text-center">Quantidade</th>
         <th scope="col">Data da Entrada</th>
-        <th scope="col">Ações</th>
+        <th scope="col" class="text-center">Ações</th>
       </tr>
     </thead>
     <tbody>
@@ -50,9 +50,9 @@
         <td>{{ inflow.id }}</td>
         <td>{{ inflow.product }}</td>
         <td>{{ inflow.supplier }}</td>
-        <td>{{ inflow.quantity }}</td>
+        <td class="text-center">{{ inflow.quantity }}</td>
         <td>{{ inflow.created_at }}</td>
-        <td>
+        <td class="text-center">
           <a href="{% url 'inflow_details' inflow.id %}" class="btn btn-info btn-sm">
             <i class="bi bi-info-circle"></i>
           </a>
