--- a/products/templates/product_list.html
+++ b/products/templates/product_list.html
@@ -69,14 +69,14 @@
   <table class="table table-striped table-bordered">
     <thead class="thead-dark">
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">Título</th>
-        <th scope="col">Marca</th>
-        <th scope="col">Categoria</th>
-        <th scope="col">Número de Série</th>
-        <th scope="col">Estoque</th>
-        <th scope="col">Preço de Venda</th>
-        <th scope="col">Ações</th>
+        <th scope="col" class="text-center">#</th>
+        <th scope="col" class="text-center">Título</th>
+        <th scope="col" class="text-center">Marca</th>
+        <th scope="col" class="text-center">Categoria</th>
+        <th scope="col" class="text-center">Número de Série</th>
+        <th scope="col" class="text-center">Estoque</th>
+        <th scope="col" class="text-center">Preço de Venda</th>
+        <th scope="col" class="text-center">Ações</th>
       </tr>
     </thead>
     <tbody>
@@ -87,9 +87,9 @@
         <td>{{ product.brand }}</td>
         <td>{{ product.category }}</td>
         <td>{{ product.serie_number }}</td>
-        <td>{{ product.quantity }}</td>
-        <td>{{ product.salling_price }}</td>
-        <td>
+        <td class="text-center">{{ product.quantity }}</td>
+        <td class="text-end">R$ {{ product.salling_price }}</td>
+        <td class="text-center">
           <a href="{% url 'product_details' product.id %}" class="btn btn-info btn-sm">
             <i class="bi bi-info-circle"></i>
           </a>
