--- a/products/templates/product_list.html
+++ b/products/templates/product_list.html
@@ -5,6 +5,8 @@
 
 {% block content %}
 
+{% include 'components/_product_metrics.html' %}
+
 <div class="container text-center">
   <h1 class="display-6">Lista de Produtos</h1>
 </div>
